[project]
name = "atcoder-daily-training"
version = "0.1.0"
description = ""
authors = [
    {name = "Cry999",email = "when.the.cry999@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sortedcontainers (>=2.4.0,<3.0.0)",
    "ac-library-python (>=0.1.0,<0.2.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
